--- a/Creo/README
+++ b/Creo/README
@@ -1,2 +1,3 @@
 Aici postam modele 3d
-Neaparat in format zip
+Neaparat in format zip, stl sau obj
+Assembly urile se posteaza cu toate piesele componente
